// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OWASP params > should be able to generate hash ('ARGON2D_OWASP_2026_HICPU') 1`] = `
{
  "hash": {
    "data": [
      46,
      12,
      181,
      143,
      186,
      226,
      152,
      64,
      162,
      9,
      194,
      75,
      9,
      4,
      128,
      202,
      76,
      208,
      127,
      114,
      135,
      90,
      2,
      35,
      40,
      251,
      233,
      66,
      1,
      80,
      0,
      136,
    ],
    "type": "Buffer",
  },
  "id": "argon2d",
  "params": {
    "m": 7168,
    "p": 1,
    "t": 5,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
  "version": 19,
}
`;

exports[`OWASP params > should be able to generate hash ('ARGON2D_OWASP_2026_HIMEM') 1`] = `
{
  "hash": {
    "data": [
      25,
      140,
      161,
      188,
      164,
      239,
      184,
      50,
      153,
      147,
      110,
      144,
      143,
      124,
      134,
      197,
      151,
      3,
      76,
      203,
      58,
      90,
      250,
      233,
      223,
      238,
      26,
      71,
      90,
      4,
      213,
      19,
    ],
    "type": "Buffer",
  },
  "id": "argon2d",
  "params": {
    "m": 47104,
    "p": 1,
    "t": 1,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
  "version": 19,
}
`;

exports[`OWASP params > should be able to generate hash ('ARGON2I_OWASP_2026_HICPU') 1`] = `
{
  "hash": {
    "data": [
      6,
      225,
      91,
      163,
      144,
      19,
      171,
      106,
      141,
      219,
      245,
      249,
      172,
      141,
      51,
      57,
      105,
      130,
      118,
      48,
      244,
      173,
      150,
      60,
      162,
      222,
      167,
      5,
      194,
      110,
      48,
      27,
    ],
    "type": "Buffer",
  },
  "id": "argon2i",
  "params": {
    "m": 7168,
    "p": 1,
    "t": 5,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
  "version": 19,
}
`;

exports[`OWASP params > should be able to generate hash ('ARGON2I_OWASP_2026_HIMEM') 1`] = `
{
  "hash": {
    "data": [
      224,
      160,
      3,
      119,
      219,
      134,
      133,
      41,
      138,
      109,
      113,
      209,
      218,
      174,
      167,
      242,
      11,
      13,
      35,
      174,
      141,
      154,
      0,
      52,
      211,
      218,
      202,
      69,
      151,
      157,
      33,
      111,
    ],
    "type": "Buffer",
  },
  "id": "argon2i",
  "params": {
    "m": 12288,
    "p": 1,
    "t": 3,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
  "version": 19,
}
`;

exports[`OWASP params > should be able to generate hash ('ARGON2ID_OWASP_2026_HICPU') 1`] = `
{
  "hash": {
    "data": [
      94,
      242,
      63,
      182,
      178,
      215,
      237,
      87,
      181,
      46,
      26,
      41,
      248,
      167,
      228,
      249,
      98,
      224,
      90,
      210,
      118,
      238,
      193,
      95,
      38,
      74,
      70,
      250,
      40,
      133,
      192,
      221,
    ],
    "type": "Buffer",
  },
  "id": "argon2id",
  "params": {
    "m": 7168,
    "p": 1,
    "t": 5,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
  "version": 19,
}
`;

exports[`OWASP params > should be able to generate hash ('ARGON2ID_OWASP_2026_HIMEM') 1`] = `
{
  "hash": {
    "data": [
      67,
      174,
      125,
      242,
      3,
      215,
      164,
      156,
      92,
      95,
      16,
      167,
      170,
      175,
      90,
      223,
      74,
      133,
      191,
      81,
      186,
      251,
      146,
      56,
      178,
      189,
      137,
      201,
      17,
      178,
      41,
      208,
    ],
    "type": "Buffer",
  },
  "id": "argon2id",
  "params": {
    "m": 47104,
    "p": 1,
    "t": 1,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
  "version": 19,
}
`;

exports[`OWASP params > should be able to generate hash ('PBKDF2_OWASP_2026_SHA256') 1`] = `
{
  "hash": {
    "data": [
      222,
      74,
      33,
      8,
      128,
      129,
      214,
      200,
      160,
      137,
      214,
      186,
      94,
      86,
      79,
      249,
      158,
      250,
      202,
      175,
      241,
      103,
      14,
      195,
      161,
      191,
      9,
      122,
      143,
      96,
      153,
      233,
    ],
    "type": "Buffer",
  },
  "id": "pbkdf2-sha256",
  "params": {
    "i": 600000,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
}
`;

exports[`OWASP params > should be able to generate hash ('PBKDF2_OWASP_2026_SHA512') 1`] = `
{
  "hash": {
    "data": [
      237,
      22,
      156,
      201,
      247,
      240,
      29,
      103,
      253,
      145,
      70,
      125,
      250,
      75,
      45,
      224,
      221,
      226,
      25,
      202,
      75,
      174,
      203,
      192,
      212,
      3,
      177,
      39,
      75,
      174,
      234,
      188,
      218,
      49,
      115,
      171,
      224,
      36,
      201,
      210,
      102,
      194,
      248,
      215,
      227,
      13,
      34,
      113,
      50,
      151,
      85,
      145,
      14,
      199,
      153,
      88,
      108,
      19,
      232,
      152,
      96,
      120,
      150,
      180,
    ],
    "type": "Buffer",
  },
  "id": "pbkdf2-sha512",
  "params": {
    "i": 210000,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
}
`;

exports[`OWASP params > should be able to generate hash ('SCRYPT_OWASP_2026_HICPU') 1`] = `
{
  "hash": {
    "data": [
      99,
      147,
      133,
      50,
      24,
      74,
      88,
      54,
      249,
      251,
      100,
      149,
      179,
      172,
      15,
      229,
      127,
      191,
      7,
      55,
      75,
      8,
      35,
      79,
      5,
      211,
      137,
      140,
      174,
      71,
      169,
      74,
    ],
    "type": "Buffer",
  },
  "id": "scrypt",
  "params": {
    "ln": 13,
    "p": 10,
    "r": 8,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
}
`;

exports[`OWASP params > should be able to generate hash ('SCRYPT_OWASP_2026_HIMEM') 1`] = `
{
  "hash": {
    "data": [
      107,
      181,
      167,
      225,
      93,
      134,
      76,
      150,
      166,
      61,
      32,
      83,
      226,
      139,
      100,
      24,
      94,
      135,
      53,
      188,
      67,
      223,
      52,
      97,
      199,
      63,
      145,
      163,
      61,
      204,
      32,
      192,
    ],
    "type": "Buffer",
  },
  "id": "scrypt",
  "params": {
    "ln": 17,
    "p": 1,
    "r": 8,
  },
  "salt": {
    "data": [
      115,
      116,
      97,
      114,
      115,
      111,
      102,
      108,
      121,
      114,
      97,
    ],
    "type": "Buffer",
  },
}
`;
